feat: melhorias no controle de logs e inclusão de suporte a JWT
- Atualizado dependencia incluido DevTools spring para ter Hot Reload.
- Incluído suporte aprimorado para autenticação JWT:
  - Adicionado código no serviço de autenticação para geração de tokens JWT.
  - Utilizado o algoritmo HMAC512 com chave secreta para assinatura dos tokens.
  - Definido método para registro de usuários com configuração padrão de roles.
- Atualizações no controle de logs:
  - Adicionado registro detalhado de erros, incluindo violações de restrições SQL.
  - Log expandido para rastrear operações durante inicialização e execução da aplicação.
- Melhorias gerais no manuseio de erros e segurança:
  - Tratamento de exceções SQL aprimorado para evitar problemas de duplicidade de usuários.
  - Ajustado logging para evitar informações sensíveis desnecessárias.